# EmailService

./: .env.example  AWS_DEPLOYMENT.md  COMPLETE_BUILD_ROADMAP.md  Dockerfile  PLAN_PURCHASE_FLOW_COMPLETE.md  PROJECT_STATUS.md  README.md  Untitled_Document.md  aboutProject.md  celery_app.py  changesMade.md  changes_made  changes_made.md  ezen_color_palette_document.md  ezen_design_excellence_checklist.md  get_token.py  main.py  new changes to be made in backend.md  pyproject.toml  render.yaml  requirements.txt  requirementsFrontend.txt  solution of remaining problems.md  sql_commands.md  start.sh  stress.py  structre.md
Backend/: .dockerignore  .env.example  .gitignore  Dockerfile  celery_app.py  changesMade.md  get_token.py  main.py  test.ipynb
config/: settings.py
extra/: UPI_PAYMENT_SYSTEM_PRD.md  UPI_SYSTEM_ARCHITECTURE.mmd  analysis_results.md  backendTracker.md  frontendSecurityMeasures.md  frontendTracker.md  frontendhelp.md  myCurrrentDbSchema.md  setup_payment_tables.sql  what_my_frontend_looks_like.md
frontend/: middleware.ts  package-lock.json  package.json  wrangler.toml
prompts/: email_classifier.txt  email_extractor.txt  email_generator.txt
routes/: admin_routes.py  auth_routes.py  business_routes.py  email_routes.py  filter_routes.py  gmail_oauth_routes.py  queue_routes.py  settings_routes.py  ticket_routes.py
services/: approval_service.py  auth_guard.py  auth_service.py  classifier.py  database.py  email_generator.py  email_pipeline_service.py  extractor.py  filter_service.py  gmail_oauth_service.py  gmail_service.py  gmail_watch_service.py  (+5 more)
(+76 files in other folders)
