[project]
name = "lanchain-projects"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "azure-core>=1.41.0",
    "azure-identity>=1.25.3",
    "fastapi>=0.136.3",
    "google-api-python-client>=2.197.0",
    "google-auth>=2.53.0",
    "google-auth-httplib2>=0.4.0",
    "google-auth-oauthlib>=1.4.0",
    "jinja2>=3.1.6",
    "langchain>=1.3.2",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.0",
    "langchain-openai>=1.2.2",
    "openai>=2.38.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.2.2",
    "tiktoken>=0.13.0",
    "uvicorn>=0.48.0",
]
